fix: add table container adjustment and dark mode danger color palette more saturatedfor better contrast

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -52,10 +52,10 @@
   --color-warning-pressed-dark: #c38d2a;
   --color-warning-accent-dark: #3C3426;
 
-  --color-danger-dark: #e57373;
-  --color-danger-hover-dark: #ee8a8a;
-  --color-danger-focus-dark: #d86565;
-  --color-danger-pressed-dark: #bb5050;
+  --color-danger-dark: #cc5f5f;
+  --color-danger-hover-dark: #d56f6f;
+  --color-danger-focus-dark: #b94d4d;
+  --color-danger-pressed-dark: #9e3f3f;
   --color-danger-accent-dark: #321a1a;
 
   --color-font-dark: #f4f4f4;
